[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Networking/DraftLobby.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/UI/IntegerLineEdit.gd" type="Script" id=3]

[node name="DraftLobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -214.0
margin_top = 64.0
margin_right = 86.0
margin_bottom = 104.0
grow_horizontal = 2
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 10.0
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 20 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Players:"
align = 1
valign = 1

[node name="MultiplayerUI" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -32.0
margin_right = 69.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="MultiplayerUI"]
margin_right = 138.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "Host"

[node name="JoinButton" type="Button" parent="MultiplayerUI"]
margin_top = 41.0
margin_right = 138.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 2 )
text = "Join"

[node name="BackButton" type="Button" parent="MultiplayerUI"]
margin_top = 82.0
margin_right = 138.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
text = "Back to Menu"

[node name="IPSet" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="IPSet"]
margin_left = -104.0
margin_top = 8.0
margin_right = 105.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="IPSet/HBoxContainer"]
margin_top = 5.0
margin_right = 77.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "IP Address: "

[node name="LineEdit" type="LineEdit" parent="IPSet/HBoxContainer"]
margin_left = 81.0
margin_right = 209.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = ExtResource( 2 )
text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="IPSet"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = 20.0
margin_right = 45.5
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="IPSet"]
margin_left = -25.5
margin_top = 72.0
margin_right = 65.5
margin_bottom = 92.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
visible = false
margin_left = 64.0
margin_top = 64.0
margin_right = 140.0
margin_bottom = 132.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="Menu"]
margin_right = 76.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -228.0
margin_top = 64.0
margin_right = -112.0
margin_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Start Draft"

[node name="DraftTypeButton" type="OptionButton" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -234.0
margin_top = 128.0
margin_right = -104.0
margin_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Draft Type"

[node name="DraftTypeOptions" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -152.0
margin_top = 192.0
margin_right = -112.0
margin_bottom = 232.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinstonOptions" type="Control" parent="DraftTypeOptions"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="DraftTypeOptions/WinstonOptions"]
visible = false
margin_left = -136.0
margin_right = 121.0
margin_bottom = 24.0
rect_min_size = Vector2( 148, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Recommended 2-3 players"
autowrap = true

[node name="BoosterOptions" type="Control" parent="DraftTypeOptions"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2

[node name="Label" type="Label" parent="DraftTypeOptions/BoosterOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -20.0
margin_right = 101.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Recommended 3+ Players"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="DraftTypeOptions/BoosterOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.981
margin_top = 10.0
margin_right = 60.0187
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Number of Boosters: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="DraftTypeOptions/BoosterOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.746
margin_top = 4.0
margin_right = 78.254
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupCenter" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2

[connection signal="pressed" from="MultiplayerUI/HostButton" to="." method="hostButtonPressed"]
[connection signal="pressed" from="MultiplayerUI/JoinButton" to="." method="joinButtonPressed"]
[connection signal="pressed" from="MultiplayerUI/BackButton" to="." method="backButtonPressed"]
[connection signal="pressed" from="IPSet/JoinButton" to="." method="ipJoinButtonPressed"]
[connection signal="pressed" from="IPSet/BackButton" to="." method="ipBackButtonPressed"]
[connection signal="pressed" from="Menu/MainMenuButton" to="." method="lobbyBackPressed"]
[connection signal="pressed" from="StartButton" to="." method="startDraftButtonPressed"]
[connection signal="item_selected" from="DraftTypeButton" to="." method="draftTypeSelected"]
